web/custom.css
:root {
  --ifm-color-primary: #3152bc;
  --ifm-color-primary-dark: #2c4aa9;
  --ifm-color-primary-darker: #2a46a0;
  --ifm-color-primary-darkest: #223984;
  --ifm-color-primary-light: #395ccb;
  --ifm-color-primary-lighter: #4364ce;
  --ifm-color-primary-lightest: #5f7bd5;
}

html[data-theme="dark"] {
  --ifm-color-primary: #f8f66d;
  --ifm-color-primary-dark: #f6f44b;
  --ifm-color-primary-darker: #f6f33a;
  --ifm-color-primary-darkest: #eeeb0b;
  --ifm-color-primary-light: #faf88f;
  --ifm-color-primary-lighter: #faf9a0;
  --ifm-color-primary-lightest: #fdfcd3;
}

.tabs__item {
  margin-top: 0;
}

